--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -92,7 +92,7 @@ jobs:
     permissions:
       contents: none
     runs-on: ubuntu-latest
-    needs: build
+    needs: deploy_staging
     environment:
       name: 'PRD'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
