feat: controller de environments

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -8,5 +8,6 @@
   "CosmosSettings": {
     "EndpointUri": "<Your endpoint>",
     "PrimaryKey": "<Your primary key>"
-  }
+  },
+  "Environment": "Este é o ambiente de Homologação"
 }
