--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -65,7 +65,7 @@ jobs:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
-  deploy_staging:
+  staging:
     permissions:
       contents: none
     runs-on: ubuntu-latest
@@ -88,11 +88,11 @@ jobs:
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-  deploy_production:
+  production:
     permissions:
       contents: none
     runs-on: ubuntu-latest
-    needs: deploy_staging
+    needs: staging
     environment:
       name: 'PRD'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
