--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -27,7 +27,7 @@ env:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "release/*" ]
   workflow_dispatch:
 
 permissions:
@@ -93,6 +93,7 @@ jobs:
       contents: none
     runs-on: ubuntu-latest
     needs: staging
+    if: github.ref == 'refs/heads/main'
     environment:
       name: 'PRD'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
